Changes to animations, adding new ones for gradient and background

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -5,8 +5,11 @@ $font_head: "Nunito";
 $font_color: white;
 
 /* COLOR */
-$color_main: #23a6d5;
-$color_accent: #23d5ab;
+$color_main: #23A6D5;
+$color_accent: #23D5AB;
+
+$color_secondary: #EE7752;
+$color_secondary_accent: #E73C7E;
 
 /* BACKGROUND */
 $background: "../img/background.jpg";
