--- a/assets/sass/_mixins.scss
+++ b/assets/sass/_mixins.scss
@@ -1,19 +1,25 @@
-@mixin transition($time) {
-	-webkit-transition: all $time ease-in-out;
-    transition: all $time ease-in-out;
+@mixin animate($animation, $time) {
+  -webkit-animation: $animation $time ease infinite;
+  -moz-animation: $animation $time ease infinite;
+  -o-animation: $animation $time ease infinite;
+  animation: $animation $time ease infinite;
 }
 
 @mixin grayscale($percent) {
-    -webkit-filter: grayscale($percent);
-    -moz-filter: grayscale($percent);
-    -ms-filter: grayscale($percent);
-    -o-filter: grayscale($percent);
-    filter: grayscale($percent);
+  -webkit-filter: grayscale($percent);
+  -moz-filter: grayscale($percent);
+  -ms-filter: grayscale($percent);
+  -o-filter: grayscale($percent);
+  filter: grayscale($percent);
 }
 
-@mixin gradient($angle, $to, $from) {
-    background: $to;
-    background: -moz-linear-gradient($angle, $to 0%, $from 100%);
-    background: -webkit-linear-gradient($angle, $to 0%, $from 100%);
-    background: linear-gradient($angle, $to 0%, $from 100%);
+@mixin gradient($deg, $a, $b, $c, $d) {
+  background: -moz-linear-gradient($deg, $a, $b, $c, $d);
+  background: -webkit-linear-gradient($deg, $a, $b, $c, $d);
+  background: linear-gradient($deg, $a, $b, $c, $d);
+}
+
+@mixin transition($time) {
+	-webkit-transition: all $time ease-in-out;
+  transition: all $time ease-in-out;
 }
