--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -1,6 +1,7 @@
 @import url('../libs/normalize.css');
 @import "base";
 @import "mixins";
+@import "animations";
 
 body {
   color: $font_color;
@@ -10,12 +11,12 @@ body {
     position: fixed;
     top: 0%;
     left: 0%;
-    width: 100%;
-    height: 100%;
     z-index: -1;
   }
   &::before {
     content: "";
+    width: 100%;
+    height: 100%;
     background-image: url($background);
     background-size: cover;
     background-position: 50% 50%;
@@ -23,9 +24,12 @@ body {
     @include grayscale(100%);
   }
   &::after {
+    width: 400%;
+    height: 400%;
     content: "";
     opacity: 0.8;
-    @include gradient(45deg, $color_main, $color_accent);
+    @include gradient(-45deg, $color_secondary, $color_secondary_accent, $color_main, $color_accent);
+    @include animate(gradient_transition, 15s);
   }
 }
 
@@ -99,9 +103,10 @@ span {
   left: 25px;
   bottom: 15px;
   font-weight: lighter;
+  opacity: .5;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 480px) {
   section { top: 10%; }
   h2 { font-size: 2.5em; }
 }
