--- a/assets/sass/_animations.scss
+++ b/assets/sass/_animations.scss
@@ -1,16 +1,20 @@
 @-webkit-keyframes gradient_transition {
     0% { top: 0; left: 0; }
-    100% { top: -200%; left: -200%; }
+    50% { top: -200%; left: -200%; }
+    100% { top: 0; left: 0; }
 }
 @-moz-keyframes gradient_transition {
     0% { top: 0; left: 0; }
-    100% { top: -200%; left: -200%; }
+    50% { top: -200%; left: -200%; }
+    100% { top: 0; left: 0; }
 }
 @-o-keyframes gradient_transition {
     0% { top: 0; left: 0; }
-    100% { top: -200%; left: -200%; }
+    50% { top: -200%; left: -200%; }
+    100% { top: 0; left: 0; }
 }
 @keyframes gradient_transition {
     0% { top: 0; left: 0; }
-    100% { top: -200%; left: -200%; }
+    50% { top: -200%; left: -200%; }
+    100% { top: 0; left: 0; }
 }
