--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -117,6 +117,7 @@ span {
 @media only screen and (max-width: 480px) {
   section { top: 10%; }
   h2 { font-size: 2.5em; }
+  * > span { font-size: .75em; }
 }
 
 ::-moz-selection {
